Removed options from MML JVM